acrescentado validação em especificações

--- a/cadastro.ipynb
+++ b/cadastro.ipynb
@@ -37,13 +37,13 @@
     "        cadastro = []\n",
     "    return cadastro\n",
     "\n",
-    "def atualizar_arquivo_cadastro(nova_lista: list):\n",
+    "def atualizar_arquivo_cadastro(nova_lista: list) -> list:\n",
     "    '''Atualiza arquivo json de acordo com a estrutura certa usando os valores\n",
     "    da lista atualizada recebida como parâmetro.'''\n",
     "    \n",
     "    # Sobrescreve o arquivo json com a nova lista.\n",
     "    with open(ARQUIVO_CADASTRO, 'w') as arquivo:\n",
-    "        arquivo.write(json.dumps({\"Produtos\": nova_lista}))\n",
+    "        arquivo.write(json.dumps({\"Produtos\": nova_lista}, indent=4))\n",
     "    print(\"Arquivo atualizado.\")\n",
     "    return"
    ]
@@ -137,7 +137,10 @@
     "                    break\n",
     "        elif chave == 'Especificações':\n",
     "            print(f'Informe {chave} do produto: ')\n",
-    "            valor = especificacoes()\n",
+    "            while True:\n",
+    "                valor = validar_string(chave, especificacoes())\n",
+    "                if valor != None:\n",
+    "                    break\n",
     "        elif chave == 'Estoque':\n",
     "            while True:\n",
     "                valor = validar_numero(chave, input(f'Informe {(chave).lower()} do produto: '))\n",
@@ -158,9 +161,8 @@
     "    # Adiciona o produto à lista de produtos\n",
     "    cadastro.append(produto)\n",
     "    # Sobrescreve o arquivo json com a nova lista.\n",
-    "    with open(ARQUIVO_CADASTRO, 'w') as arquivo:\n",
-    "        arquivo.write(json.dumps({\"Produtos\": cadastro}))\n",
-    "\n",
+    "    atualizar_arquivo_cadastro(cadastro)\n",
+    "    \n",
     "    return produto"
    ]
   },
@@ -273,7 +275,7 @@
     "                print('Cadastro atualizado')\n",
     "        return cadastro \n",
     "    else:\n",
-    "        print('Produto não encontrado.')\n",
+    "        print('Impossível atualizar o cadastro. ID não existe.')\n",
     "\n",
     "\n",
     "def excluir_produto(produto_id: int):\n",
@@ -294,7 +296,7 @@
     "        else:\n",
     "            print(\"Ação cancelada.\")\n",
     "    else:\n",
-    "        print('Produto não encontrado no cadastro.')"
+    "        print('Impossível excluir cadastro. ID não existe.')"
    ]
   },
   {
@@ -307,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -319,19 +321,12 @@
       "\n",
       "Informe qual opção deseja executar:\n",
       "\n",
-      "{'ID': 1, 'Nome': 'Carteira Porta Celular - Queridinha', 'Especificações': {'Altura': '19cm', 'Largura': '11cm', 'Cor': 'variadas'}, 'Estoque': 10, 'Descrição': 'Carteira porta celular e documentos de uso diario, alça em elástico, fechamento em ziper,  bolso externo com fechamento ziper,  bolso interno com divisão ao meio.'}\n",
-      "Informe Especificações do produto: \n",
-      "Produto inserido com sucesso.\n",
       "Produtos cadastrados: \n",
       "ID: 1 | Nome: Carteira Porta Celular - Queridinha | Estoque: 10\n",
-      "ID: 2 | Nome: computador | Estoque: 1\n",
-      "{'ID': 2, 'Nome': 'computador', 'Especificações': {'Cor': 'grafite', 'Tamanho': '15.6\"'}, 'Estoque': 1, 'Descrição': 'usado'}\n",
-      "Cadastro atualizado\n",
-      "[{'ID': 1, 'Nome': 'Carteira Porta Celular - Queridinha', 'Especificações': {'Altura': '19cm', 'Largura': '11cm', 'Cor': 'variadas'}, 'Estoque': 10, 'Descrição': 'Carteira porta celular e documentos de uso diario, alça em elástico, fechamento em ziper,  bolso externo com fechamento ziper,  bolso interno com divisão ao meio.'}, {'ID': 2, 'Nome': 'mouse', 'Especificações': {'Cor': 'grafite', 'Tamanho': '15.6\"'}, 'Estoque': 1, 'Descrição': 'usado'}]\n",
-      "Arquivo atualizado.\n",
-      "2: mouse | Qtde: 1 | usado\n",
-      "Cadastro excluído\n",
-      "Arquivo atualizado.\n"
+      "ID: 2 | Nome: computador | Estoque: 3\n",
+      "ID: 3 | Nome: computador | Estoque: 5\n",
+      "{'ID': 3, 'Nome': 'computador', 'Especificações': {'Tamanho': '15.6\"'}, 'Estoque': 5, 'Descrição': ''}\n",
+      "{'ID': 1, 'Nome': 'Carteira Porta Celular - Queridinha', 'Especificações': {'Altura': '19cm', 'Largura': '11cm', 'Cor': 'variadas'}, 'Estoque': 10, 'Descrição': 'Carteira porta celular e documentos de uso diario, alça em elástico, fechamento em ziper,  bolso externo com fechamento ziper,  bolso interno com divisão ao meio.'}\n"
      ]
     }
    ],
@@ -347,7 +342,7 @@
     "        lista_chaves = ['ID', 'Nome', 'Especificações', 'Estoque', 'Descrição']\n",
     "        lista_valores = inserir_infos(lista_chaves)\n",
     "        cadastrar_produto(lista_chaves, lista_valores)\n",
-    "        print(f\"Produto inserido com sucesso.\")\n",
+    "        print(f\"Produto cadastrado com sucesso.\")\n",
     "\n",
     "    elif opcao == '2':\n",
     "        opcao_busca = input('Você deseja consultar o produto por:\\n1 - ID\\n2 - Nome\\nOpção: ').lower()\n",
@@ -396,7 +391,7 @@
     "        break\n",
     "\n",
     "    else:\n",
-    "        print('Opção inválida, por favor, digite um número de acordo com o menu: ')\n"
+    "        print('Opção inválida, por favor, digite um número de acordo com o menu: ')"
    ]
   }
  ],
