notebook atualizado de acordo com o cadastro.py

--- a/cadastro.ipynb
+++ b/cadastro.ipynb
@@ -12,12 +12,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Projeto Módulo II - Sistema de Cadastro de Produtos\n",
-    "\n",
     "# Import e funções para lidar com arquivo:\n",
     "import json\n",
     "\n",
@@ -58,18 +56,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Levantamento de erros:\n",
     "def erro_numero(numero):\n",
+    "    '''Levanta erro de entrada com inserção de números negativos.'''\n",
+    "    \n",
     "    if numero < 0:\n",
     "        raise Exception('O número não pode ser negativo.')\n",
     "    else:\n",
     "        return numero\n",
     "\n",
     "def erro_string(string):\n",
+    "    '''Levanta erro de entrada em campos de string ou dicionário que não devem ficar vazios.'''\n",
+    "    \n",
     "    if len(string) == 0:\n",
     "        raise Exception('O campo não pode ficar vazio.')\n",
     "    else:\n",
@@ -77,6 +79,8 @@
     "\n",
     "# Validação de inputs:\n",
     "def validar_numero(campo, valor):\n",
+    "    '''Validação e tratamento de erro para campos numéricos.'''\n",
+    "    \n",
     "    try:\n",
     "        valor = int(valor)\n",
     "        valor = erro_numero(valor)\n",
@@ -87,6 +91,8 @@
     "        print(f'O {campo} precisa ser um número inteiro não negativo.')\n",
     "\n",
     "def validar_string(campo, valor):\n",
+    "    '''Validação e tratamento de erro para campos string ou dicionário.'''\n",
+    "    \n",
     "    try:\n",
     "        valor = erro_string(valor)\n",
     "        return valor\n",
@@ -104,12 +110,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Funções para cadastro:\n",
     "def especificacoes():\n",
+    "    '''Popula um dicionário com características e descrições do produto sendo\n",
+    "    cadastrado/atualizado pelo usuário.'''\n",
+    "    \n",
     "    especificacoes = {}\n",
     "    caracteristica = input('Insira o título da característica ou deixe em branco para encerrar: ').capitalize()\n",
     "    while caracteristica != '':\n",
@@ -121,7 +130,10 @@
     "        caracteristica = input('Insira o título da característica ou deixe em branco para encerrar: ').capitalize()\n",
     "    return especificacoes\n",
     "\n",
-    "def inserir_infos(lista_chaves:list) -> dict: \n",
+    "def inserir_infos(lista_chaves:list) -> list:\n",
+    "    '''Cria uma lista de valores para cada campo do cadastro e confere se os valores\n",
+    "    inseridos estão de acordo com os requisitos.'''\n",
+    "     \n",
     "    lista_valores = []\n",
     "    cadastro = consultar_cadastro()\n",
     "    for chave in lista_chaves:\n",
@@ -176,35 +188,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Funções de consulta:\n",
     "def consultar_produto(produto_id: int) -> dict:\n",
-    "    '''Busca a ID informada pelo usuário entre os registros no arquivo de cadastro. Retorna o dicionário do produto. '''\n",
+    "    '''Busca a ID informada pelo usuário entre os registros no arquivo de cadastro.\n",
+    "    Retorna o dicionário do produto.'''\n",
     "    \n",
     "    cadastro = consultar_cadastro()\n",
     "    filtro = filter(lambda produto: int(produto['ID']) == produto_id, cadastro)\n",
     "    produto = list(filtro)\n",
     "    if produto == []:\n",
-    "        print('Produto não encontrado.') # Assim o return da função já é None (não precisa return None)\n",
+    "        return None\n",
     "    else:\n",
     "        return produto[0]\n",
     "\n",
-    "def consultar_produto_nome(nome: str) -> dict:\n",
-    "    '''Busca o nome informado pelo usuário entre os registros no arquivo de cadastro. Retorna o dicionário do produto. '''\n",
+    "def consultar_produto_nome(nome: str) -> list:\n",
+    "    '''Busca o nome informado pelo usuário entre os registros no arquivo de cadastro.\n",
+    "    Retorna o dicionário do produto.'''\n",
     "    \n",
     "    cadastro = consultar_cadastro()\n",
     "    filtro = filter(lambda produto: produto['Nome'].lower() == nome.lower(), cadastro)\n",
     "    produto = list(filtro)\n",
     "    if produto == []:\n",
-    "        print('Produto não encontrado.')\n",
+    "        return None\n",
     "    else:\n",
-    "        return produto[0]\n",
+    "        return produto\n",
     "\n",
     "# A função pedida era pra listar só o ID e nome do produto, por isso tirei o que tinha a mais, pra simplificar.\n",
     "def listar_produtos():\n",
+    "    '''Printa uma lista de \"ID\", \"Nome\" e \"Estoque\" de todos os produtos do cadastro.'''\n",
     "    \n",
     "    cadastro = consultar_cadastro()\n",
     "    print('Produtos cadastrados: ')\n",
@@ -222,12 +237,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Funções de alteração do cadastro:\n",
     "def menu_atualizar_cadastro(menu:str):\n",
+    "    '''Apresenta um menu de opções de qual campo o usuário deseja alterar\n",
+    "    e retorna o campo com o valor atualizado.'''\n",
     "    \n",
     "    if menu == '1':\n",
     "        chave = 'Nome'\n",
@@ -260,7 +277,7 @@
     "        print('Opção inválida, por favor, digite um número de acordo com o menu: ')\n",
     "    \n",
     "def atualizar_cadastro_produto(produto_id:int):\n",
-    "    ''' Altera o valor de um dos campos do produto a ser informado. '''\n",
+    "    ''' Altera o valor de um dos campos do produto a ser informado.'''\n",
     "    \n",
     "    produto = consultar_produto(produto_id)\n",
     "    if produto:\n",
@@ -273,13 +290,13 @@
     "            if valor['ID'] == produto_id:\n",
     "                cadastro[indice] = produto \n",
     "                print('Cadastro atualizado')\n",
-    "        return cadastro \n",
+    "        return cadastro, produto \n",
     "    else:\n",
     "        print('Impossível atualizar o cadastro. ID não existe.')\n",
     "\n",
     "\n",
     "def excluir_produto(produto_id: int):\n",
-    "    '''Exclui o produto e todos os seus atributos da lista de produtos cadastrados. '''\n",
+    "    '''Exclui o produto e todos os seus atributos da lista de produtos cadastrados.'''\n",
     "    \n",
     "    lista_produtos = consultar_cadastro()\n",
     "    produto = consultar_produto(produto_id)\n",
@@ -320,13 +337,7 @@
       "\n",
       "\n",
       "Informe qual opção deseja executar:\n",
-      "\n",
-      "Produtos cadastrados: \n",
-      "ID: 1 | Nome: Carteira Porta Celular - Queridinha | Estoque: 10\n",
-      "ID: 2 | Nome: computador | Estoque: 3\n",
-      "ID: 3 | Nome: computador | Estoque: 5\n",
-      "{'ID': 3, 'Nome': 'computador', 'Especificações': {'Tamanho': '15.6\"'}, 'Estoque': 5, 'Descrição': ''}\n",
-      "{'ID': 1, 'Nome': 'Carteira Porta Celular - Queridinha', 'Especificações': {'Altura': '19cm', 'Largura': '11cm', 'Cor': 'variadas'}, 'Estoque': 10, 'Descrição': 'Carteira porta celular e documentos de uso diario, alça em elástico, fechamento em ziper,  bolso externo com fechamento ziper,  bolso interno com divisão ao meio.'}\n"
+      "\n"
      ]
     }
    ],
@@ -343,6 +354,7 @@
     "        lista_valores = inserir_infos(lista_chaves)\n",
     "        cadastrar_produto(lista_chaves, lista_valores)\n",
     "        print(f\"Produto cadastrado com sucesso.\")\n",
+    "        print('\\n')\n",
     "\n",
     "    elif opcao == '2':\n",
     "        opcao_busca = input('Você deseja consultar o produto por:\\n1 - ID\\n2 - Nome\\nOpção: ').lower()\n",
@@ -353,45 +365,65 @@
     "                if produto_id != None:\n",
     "                    break\n",
     "            produto = consultar_produto(produto_id)\n",
-    "            if produto:\n",
-    "                print(produto)\n",
-    "            else:\n",
+    "            if produto == None:\n",
     "                print(\"Produto não encontrado.\")\n",
+    "            else:\n",
+    "                valores = list(produto.values())\n",
+    "                print(f'ID: {valores[0]} | Nome: {valores[1]} | Estoque: {valores[3]}', end=' | ')\n",
+    "                for chave, valor in valores[2].items():\n",
+    "                    print(f\"{chave.capitalize()}: {valor}\", end=' | ')\n",
+    "                print(f'Descrição: {valores[4]}')\n",
     "        \n",
     "        elif opcao_busca == '2' or opcao_busca == 'nome':\n",
-    "                nome = input('Informe o nome do produto: ')\n",
-    "                print(consultar_produto_nome(nome))\n",
+    "            nome = input('Informe o nome do produto: ')\n",
+    "            produto = consultar_produto_nome(nome)\n",
+    "            if produto == None:\n",
+    "                print(\"Produto não encontrado.\")\n",
+    "            else:\n",
+    "                for item in produto:\n",
+    "                    valores = list(item.values())\n",
+    "                    print(f'ID: {valores[0]} | Nome: {valores[1]} | Estoque: {valores[3]}', end=' | ')\n",
+    "                    for chave, valor in valores[2].items():\n",
+    "                        print(f\"{chave.capitalize()}: {valor}\", end=' | ')\n",
+    "                    print(f'Descrição: {valores[4]}')\n",
     "        else:\n",
     "            print('Opção inválida.')\n",
+    "        print('\\n')\n",
     "\n",
     "    elif opcao == '3':\n",
     "        listar_produtos()\n",
+    "        print('\\n')\n",
     "\n",
     "    elif opcao == '4':\n",
     "        while True:\n",
-    "                produto_id = validar_numero('ID', input('Informe o ID do produto: '))\n",
-    "                if produto_id != None:\n",
-    "                    break\n",
-    "        lista_atualizada = atualizar_cadastro_produto(produto_id)\n",
-    "        print(lista_atualizada)\n",
-    "        if lista_atualizada or lista_atualizada == []:\n",
-    "            atualizar_arquivo_cadastro(lista_atualizada)\n",
-    "\n",
+    "            produto_id = validar_numero('ID', input('Informe o ID do produto: '))\n",
+    "            if produto_id != None:\n",
+    "                break\n",
+    "        try:\n",
+    "            lista_atualizada, produto = atualizar_cadastro_produto(produto_id)\n",
+    "            print(produto)\n",
+    "            if lista_atualizada or lista_atualizada == []:\n",
+    "                atualizar_arquivo_cadastro(lista_atualizada)\n",
+    "        except:\n",
+    "            print('Retornando ao Menu...')\n",
+    "        print('\\n')\n",
     "\n",
     "    elif opcao == '5':\n",
     "        while True:\n",
-    "                produto_id = validar_numero('ID', input('Informe o ID do produto: '))\n",
-    "                if produto_id != None:\n",
-    "                    break\n",
+    "            produto_id = validar_numero('ID', input('Informe o ID do produto: '))\n",
+    "            if produto_id != None:\n",
+    "                break\n",
     "        lista_atualizada = excluir_produto(produto_id)\n",
     "        if lista_atualizada or lista_atualizada == []:\n",
     "            atualizar_arquivo_cadastro(lista_atualizada)\n",
+    "        print('\\n')\n",
     "\n",
     "    elif opcao == '6':\n",
     "        break\n",
     "\n",
     "    else:\n",
-    "        print('Opção inválida, por favor, digite um número de acordo com o menu: ')"
+    "        print('Opção inválida, por favor, digite um número de acordo com o menu: ')\n",
+    "        print('\\n')\n"
    ]
   }
  ],
